gopls/mcpbridge/test/testdata/projects/error/file2.go

package other // Different package in same directory!

func Func2() {}
